<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/twitter_login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/double_padding"
            android:gravity="center"
            android:text="@string/twitter_login_explanation"
            android:textSize="18sp" />

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/twitter_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twitter_login_button" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/twitter_loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/twitter_error_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/load_error"
            android:textSize="16sp" />

        <Button
            android:id="@+id/error_retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry_button" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/twitter_normal_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorPrimaryTransparent"
            android:orientation="horizontal">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/twitter_hashtags_recyclerview"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingEnd="8dp"
                android:paddingStart="8dp" />

            <ImageView
                android:id="@+id/twitter_add_hashtag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/twitter_add_hashtag"
                android:padding="12dp"
                app:srcCompat="@drawable/ic_vector_add"
                android:tint="@color/black" />
        </LinearLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/twitter_swiperefresh_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/twitter_tweets_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>
</FrameLayout>